# insurance_platform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  railway.toml
backend/: .flake8  Dockerfile  entrypoint.sh  main.py  pyproject.toml  railway.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  07a277e35158_add_dealer_id_to_quotes_and_policies.py  0adceef66ea5_add_tenants_and_users.py  0d9fd526923d_add_reinstatement_notice_document_type.py  29909565d01c_add_vehicle_category_to_quotes.py  652fdad2fc58_add_allowed_products_and_favicon_url_to_.py  7b89730b6d6c_add_dealer_commission_model_with_per_.py  7d89a3f74f25_add_policy_model_and_quote_status_.py  8428eed903f1_fix_rate_column_precision.py  8f022dcb5e06_redesign_policy_and_transactions.py  a1b2c3d4e5f6_add_policy_documents_table.py  a22bd56124a4_add_quotes_and_vehicles.py  abac657043a5_add_dealer_model_with_tenant_.py  b1c2d3e4f5a6_add_payment_fields_to_quotes.py  (+8 more)
backend/auth/: dependencies.py  security.py
backend/models/: dealer.py  dealer_commission.py  document.py  policy.py  policy_transaction.py  quote.py  tenant.py  user.py  vehicle.py
backend/routers/: auth.py  dealers.py  internal.py  policies.py  quotes.py  reports.py
backend/schemas/: dealer.py  policy.py  quote.py
backend/services/: commission.py  document.py  finance.py  policy_state_machine.py  pricing.py
backend/tests/: conftest.py  test_auth.py  test_commission.py  test_dealers.py  test_finance.py  test_policies.py  test_pricing.py  test_quotes.py  test_reports.py
(+23 files in other folders)
